# ws-lb

./: Dockerfile  docker-compose.yaml  locustfile.py
cluster/01-docker/: create.ps1  start.sh
cluster/02-loadbalancer/: create.ps1
cluster/02-loadbalancer-metallb/: create.ps1
cluster/02-loadbalancer-metallb/kustomization/: kustomization.yaml  service.yaml
cluster/02-loadbalancer/kustomization/: cluster-issuer.yaml
cluster/02-node-port/: create.ps1
cluster/02-node-port/kustomization/: kustomization.yaml  service.yaml
cluster/03-ingress-nginx/: create.ps1
cluster/03-ingress-nginx-nodeport/: create.ps1
cluster/03-ingress-nginx-nodeport/kustomization/: ingress.yaml  kustomization.yaml  service.yaml
cluster/03-ingress-nginx/kustomization/: ingress.yaml  kustomization.yaml
cluster/04-ingress-nginx-cert/cert-manager/: kustomization.yaml
cluster/04-ingress-nginx-cert/kustomization/: deployment.yaml
cluster/04-istio-virtual-service/kustomization/: certificate.yaml  cluster-issuer.yaml  gateway.yaml  kustomization.yaml  virtual-service.yaml
cluster/05-gateway-nginx/: create.ps1
cluster/05-gateway-nginx/kustomization/: gateway.yaml  kustomization.yaml  routes.yaml
cluster/05-istio-virtual-service/: create.ps1
cluster/06-istio-nginx/: delete.ps1
cluster/droplet/: create.ps1
cluster/load/: create.ps1
cluster/loadbalancer/: create.ps1
cluster/locust/: create-az.ps1  create.ps1  delete-az.ps1
locust/: Dockerfile  docker-compose.yaml  locustfile.py  requirements.txt  server.py
ws-server/: Cargo.toml  Dockerfile
ws-server/src/: main.rs
(+23 files in other folders)
